--- a/latex/beamer/d4-handout.tex
+++ b/latex/beamer/d4-handout.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 % controlling the geometry of the page:
-\usepackage[margin=0.5in, paperwidth=8.5in, paperheight=11in]{geometry} 
+\usepackage[margin=0.5in, top=1in, paperwidth=8.5in, paperheight=11in]{geometry} 
 \usepackage{amsmath, amssymb} % useful math symbols and environments
 
 \usepackage{multicol} % multiple columns side-by-side
