--- a/latex/beamer/cosets-so-far.tex
+++ b/latex/beamer/cosets-so-far.tex
@@ -1473,39 +1473,6 @@
   
 \end{frame}
 
-
-%%====================================================================
-
-\begin{frame}{Examples of normal sugroups}
-  
-  We've seen cases where we know a subgroup will be normal
-  without having to check. \medskip\Pause
-  
-  \begin{enumerate}
-  \item The subgroup $H=G$ is always normal in $G$. \Pause The only left coset is also
-    the only right coset:
-    \[
-    eG=G=Ge.
-    \] \vspace{-4mm}\Pause
-  \item The subgroup $H=\{e\}$ is always normal. \Pause The left and
-    right cosets are singleton sets:
-    \[
-    gH=\{g\}=Hg.
-    \]
-    \vspace{-4mm}\Pause
-  \item Subgroups $H$ of index $2$ are normal. \Pause The two cosets
-    (left or right) are $H$ and $G\setmin H$. \medskip\Pause
-  \item Subgroups of \emph{abelian groups} are always normal,
-    because for any $H\leq G$, 
-    \[
-    aH=\big\{ah\mid h\in H\big\}\Pause=\big\{ha\mid h\in H\big\}\Pause=Ha.
-    \] \vspace{-4mm}\Pause
-  \item The center $Z(G)$ is always normal, for the same reason as above. \Pause
-  \item Relatedly, any subgroup of $Z(G)$ is always normal.
-  \end{enumerate}
-  
-\end{frame}
-
 %%====================================================================
 
 \begin{frame}{Normal subgroups in $D_4$}
@@ -1536,106 +1503,9 @@
       \]
     \end{column}
     \begin{column}{0.5\textwidth}
-      From our explorations, we found:\Pause
-      \begin{itemize}
-        \item $\<r\> \normal D_4$ \Pause (because it has index 2!) \Pause
-        \item $\<r^2, f\> \normal D_4$ \Pause (index 2!) \Pause
-        \item $\<r^2, rf\> \normal D_4$ \Pause (index 2!)
-        \item $\<r^2\> \normal D_4$ \Pause (because it is $Z(D_4)$!)
-      \end{itemize} \Pause
+      Which of these subgroups are normal in $D_4$?
     \end{column}
   \end{columns}
-
-  \medskip
-
-  \[
-  \begin{tikzpicture}[scale=0.6]
-    \tikzstyle{every node}=[font=\small]
-    \tikzstyle{v-faded} = [circle, draw, gray, fill=lightgray,inner sep=0pt, 
-      minimum size=4mm]
-    \tikzstyle{bbFaded} = [draw, thick, fBlue]
-    \tikzstyle{rFaded} = [draw, thick, fRed, -stealth]
-    %%
-    %% <r>
-    %%
-    \begin{scope}[shift={(0,0)}]
-      \node (e) at (0:2) [v-g] {$1$};
-      \node (r) at (90:2) [v-g] {$r$};
-      \node (r2) at (180:2) [v-g] {$r^2$};
-      \node (r3) at (270:2) [v-g] {$r^3$};
-      \node (f) at (0:1) [v-faded] {$f$};
-      \node (r3f) at (270:1) [v-faded] {$r^3\!f$};
-      \node (r2f) at (180:1) [v-faded] {$r^2\!f$};
-      \node (rf) at (90:1) [v-faded] {$rf$};
-      \draw [r] (e) to [bend right] (r);
-      \draw [r] (r) to [bend right] (r2);
-      \draw [r] (r2) to [bend right] (r3);
-      \draw [r] (r3) to [bend right] (e);
-      \draw [rFaded] (f) to [bend left=20] (r3f);
-      \draw [rFaded] (r3f) to [bend left=20] (r2f);
-      \draw [rFaded] (r2f) to [bend left=20] (rf);
-      \draw [rFaded] (rf) to [bend left=20] (f);
-      \draw [bbFaded] (e) to (f);
-      \draw [bbFaded] (r) to (rf);
-      \draw [bbFaded] (r2) to (r2f);
-      \draw [bbFaded] (r3) to (r3f);
-    \end{scope}
-    %%
-    %% <r^2, f>
-    %%
-    \begin{scope}[shift={(6,0)}]
-      \node (e) at (0:2) [v-y] {$1$};
-      \node (r) at (90:2) [v-faded] {$r$};
-      \node (r2) at (180:2) [v-y] {$r^2$};
-      \node (r3) at (270:2) [v-faded] {$r^3$};
-      \node (f) at (0:1) [v-y] {$f$};
-      \node (rf) at (90:1) [v-faded] {$rf$};
-      \node (r2f) at (180:1) [v-y] {$r^2\!f$};
-      \node (r3f) at (270:1) [v-faded] {$r^3\!f$};
-      \draw [rFaded] (e) to [bend right] (r);
-      \draw [rFaded] (r) to [bend right] (r2);
-      \draw [rFaded] (r2) to [bend right] (r3);
-      \draw [rFaded] (r3) to [bend right] (e);
-      \draw [rFaded] (f) to [bend left] (r3f);
-      \draw [rFaded] (r3f) to [bend left] (r2f);
-      \draw [rFaded] (r2f) to [bend left] (rf);
-      \draw [rFaded] (rf) to [bend left] (f);
-      \draw [bb] (e) to (f);
-      \draw [bbFaded] (r) to (rf);
-      \draw [bb] (r2) to (r2f);
-      \draw [bbFaded] (r3) to (r3f);
-      \draw [gg] (f) to [bend right] (r2f);
-      \draw [gg] (e) to [bend left] (r2);
-    \end{scope}
-    %%
-    %% <r^2, rf>
-    %%
-    \begin{scope}[shift={(12,0)}]
-      \node (e) at (0:2) [v-y] {$1$};
-      \node (r) at (90:2) [v-faded] {$r$};
-      \node (r2) at (180:2) [v-y] {$r^2$};
-      \node (r3) at (270:2) [v-faded] {$r^3$};
-      \node (f) at (0:1) [v-faded] {$f$};
-      \node (rf) at (90:1) [v-y] {$rf$};
-      \node (r2f) at (180:1) [v-faded] {$r^2\!f$};
-      \node (r3f) at (270:1) [v-y] {$r^3\!f$};
-      \draw [rFaded] (e) to [bend right] (r);
-      \draw [rFaded] (r) to [bend right] (r2);
-      \draw [rFaded] (r2) to [bend right] (r3);
-      \draw [rFaded] (r3) to [bend right] (e);
-      \draw [rFaded] (f) to [bend left] (r3f);
-      \draw [rFaded] (r3f) to [bend left] (r2f);
-      \draw [rFaded] (r2f) to [bend left] (rf);
-      \draw [rFaded] (rf) to [bend left] (f);
-      \draw [bb] (e) to (rf);
-      \draw [bbFaded] (r) to (rf);
-      \draw [bb] (r2) to (r3f);
-      \draw [bbFaded] (r3) to (r3f);
-      \draw [gg] (rf) to (r3f);
-      \draw [gg] (e) to  (r2);
-    \end{scope}
-  \end{tikzpicture}
-  \]
 \end{frame}
 
 
