normal subgroups slides

--- a/latex/beamer/visualalgebra.sty
+++ b/latex/beamer/visualalgebra.sty
@@ -194,6 +194,7 @@
 \def\lleq{\preccurlyeq}
 \def\Cdots{\cdot\!\cdot\!\cdot}
 \DeclareMathOperator\curl{curl}
+\def\inv{^{-1}}
 
 %% Linear algebra
 \DeclareMathOperator\Mat{Mat}
